[gd_scene load_steps=10 format=3 uid="uid://7qo04ha4htkr"]

[ext_resource type="Script" path="res://Boss/Script/attack_cowboy.gd" id="1_3oip3"]
[ext_resource type="Texture2D" uid="uid://cf6gcww60mbgs" path="res://Assets/Boss/Attack inimigo.png" id="1_51cqw"]
[ext_resource type="AudioStream" uid="uid://5k07fua88fj0" path="res://Sounds/wrong-buzzer-6268.mp3" id="3_g4al2"]
[ext_resource type="AudioStream" uid="uid://dhj826qih6b6n" path="res://Sounds/failure-drum-sound-effect-2-7184.mp3" id="4_u4apf"]

[sub_resource type="Animation" id="Animation_28068"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_51cqw")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Texture:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Collision:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("HitBox:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_vofck"]
resource_name = "projetil"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_51cqw")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.6001),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 3]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Texture:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Collision:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, -1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("HitBox:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, -1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j0kmd"]
_data = {
"RESET": SubResource("Animation_28068"),
"projetil": SubResource("Animation_vofck")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_4av21"]
radius = 11.0

[sub_resource type="CircleShape2D" id="CircleShape2D_xeqi5"]

[node name="AttackCowboy" type="CharacterBody2D" node_paths=PackedStringArray("cell") groups=["Destructible"]]
collision_layer = 16
collision_mask = 4
script = ExtResource("1_3oip3")
cell = NodePath("Texture/Num")

[node name="Animation" type="AnimationPlayer" parent="."]
autoplay = "projetil"
libraries = {
"": SubResource("AnimationLibrary_j0kmd")
}

[node name="Texture" type="Sprite2D" parent="."]
texture = ExtResource("1_51cqw")
hframes = 4

[node name="Num" type="Label" parent="Texture"]
offset_left = -4.0
offset_top = -13.0
offset_right = 36.0
offset_bottom = 13.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
text = "0"
metadata/_edit_use_anchors_ = true

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_4av21")
debug_color = Color(0.964706, 0.164706, 0.247059, 0.419608)

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 34

[node name="Collision" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("CircleShape2D_xeqi5")

[node name="playerDamage" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_g4al2")

[node name="Failure" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_u4apf")

[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="finished" from="playerDamage" to="." method="_on_player_damage_finished"]
[connection signal="finished" from="Failure" to="." method="_on_failure_finished"]
